=================
Changes for Crate
=================

Unreleased
==========

2015/10/07 0.51.5
=================

 - Updated crate-admin to 0.14.6 which includes following changes:

   - fixed a visual bug that let an item in the node/table list partly disappear
     if scrolling gets enabled

   - fixed URL to download in dropdown that notifies about old Crate version

   - fixed a bug that displays a zero value as NULL value

 - Fixed a bug in SHOW CREATE TABLE statement that leads to a wrong table
   schema if the table contains nested objects

 - Fix: Prevent NPE in COPY FROM and INSERT FROM SUBQUERY queries
   when newly created shards are not available yet

 - Fixed an issue that causes a ClosedChannelException during BLOB download

 - Fixed a bug that causes a NaN response on _score system column in select
   statement that uses an ORDER BY clause

 - Fix: in some rare cases tables were not updated on every node after table
   schema changes

 - If the same table appears more than once in the FROM clause now an error is
   thrown instead of silently ignoring it.

 - Fixed a rare bug that leads to serialization issues when a ShardBulkRequest
   was serialized more than once

 - Fixed a bug that could cause imports from s3 result in an error instead of
   importing the data if the URI contained wildcards.

 - Improve performance of LIKE and Regexp queries

 - Fix: Order by ``_raw`` and/or ``_id`` did not work.

 - Fix: support compressed ``_source``

2015/09/18 0.51.4
=================

 - Fixed calculation of the EC2 discovery retry delay in order to prevent
   exceeding of the AWS API request limit.

 - Updated crate-admin to 0.14.5 which includes following changes:

   - display ``NULL`` instead of empty cell in console results table

2015/09/15 0.51.3
=================

 - Display column names that contain a dot correctly in information schema
   and result column headers

2015/09/08 0.51.2
=================
